# gateway-service/app/src/gateway/static/swagger.yaml
@@ -4,10 +4,59 @@ info:
   version: 1.0.0
 
 servers:
-  - url: http://127.0.0.1:5000
+  - url: http://gateway-service:5000
     description: Local testing
 
 paths:
+
+  /api/health_check:
+    get:
+      description: Health check to retrun static content
+      parameters:
+        - in: query
+          name: action_status
+          description: Only valid in combination with asynchronous = true
+          required: false
+          schema:
+            type: string
+            enum:
+              - SUBMITTED
+              - DRAFT
+            default: SUBMITTED
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HealthCheck'
+        '500':
+          description: LDAP returned false
+          content:
+            text/plain:
+              schema:
+                type: string
+
+
+
+  /api/ldap/health_check:
+    get:
+      description: LDAP Service health check to retrun static content
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HealthCheck'
+        '500':
+          description: LDAP returned false
+          content:
+            text/plain:
+              schema:
+                type: string
+
+
   /api/entries:
     post:
       summary: Adds a new entry
@@ -28,10 +77,22 @@ paths:
       responses:
         '201':
           description: Entry created
+          content:
+            text/plain:
+              schema:
+                type: string
         '400':
           description: The request JSON was not valid, or the dn is in use.
+          content:
+            text/plain:
+              schema:
+                type: string
         '500':
           description: LDAP returned false
+          content:
+            text/plain:
+              schema:
+                type: string
 
   /api/entry/{dn}:
     get:
@@ -60,10 +121,22 @@ paths:
                 $ref: '#/components/schemas/Entry'
         '400':
           description: The request JSON was not valid.
+          content:
+            text/plain:
+              schema:
+                type: string
         '404':
           description: The DN does not exist.
+          content:
+            text/plain:
+              schema:
+                type: string
         '500':
           description: LDAP returned false.
+          content:
+            text/plain:
+              schema:
+                type: string
     put:
       summary: Modifies an exiting entry
       description: See https://ldap3.readthedocs.io/en/latest/modify.html
@@ -93,10 +166,22 @@ paths:
           description: LDAP returned true.
         '400':
           description: The request JSON was not valid.
+          content:
+            text/plain:
+              schema:
+                type: string
         '404':
           description: The DN does not exist.
+          content:
+            text/plain:
+              schema:
+                type: string
         '500':
           description: LDAP returned false.
+          content:
+            text/plain:
+              schema:
+                type: string
     delete:
       summary: Delete an entry by DN
       description: Given a distinguished name, deletes an entry
@@ -118,8 +203,16 @@ paths:
       responses:
         '204':
           description: OK.
+          content:
+            text/plain:
+              schema:
+                type: string
         '500':
           description: LDAP returned false.
+          content:
+            text/plain:
+              schema:
+                type: string
 
 
   /api/search:
@@ -150,10 +243,19 @@ paths:
                   $ref: '#/components/schemas/Entry'
         '400':
           description: The request JSON was not valid.
+          content:
+            text/plain:
+              schema:
+                type: string
         '500':
           description: LDAP returned false.
+          content:
+            text/plain:
+              schema:
+                type: string
 components:
   schemas:
+
     AddEntryRequest:
       description: This is the distinguished name, object class,s and attributes, and controls (optional) for a new LDAP entry.
       type: object
@@ -215,6 +317,24 @@ components:
             first_name: Maxine
             last_name: Gables
             mail: m.gables@company.com
+
+    HealthCheck:
+      description: System health check
+      type: object
+      properties:
+        system:
+          type: string
+        status:
+          type: string
+        database_status:
+          type: string
+        hostname:
+          type: string
+        ip_addr:
+          type: string
+        date_time:
+          type: Date
+
 
     ModifyEntryRequest:
       type: object
